--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4b6ab180",
+   "id": "6c1d8dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d51b22a9",
+   "id": "1f931f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "077ec6ad",
+   "id": "26dfbc11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8ba0d786",
+   "id": "c90f5f65",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5c33bfa8",
+   "id": "63ef3e08",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8cbd01e1",
+   "id": "fcfa8587",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e2cfa043",
+   "id": "85c4238b",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d1c697bb",
+   "id": "f77b455f",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2e173c7d",
+   "id": "c63774f7",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "01d1e355",
+   "id": "80e58bd7",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "83432b7e",
+   "id": "b148c9a9",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a4660315",
+   "id": "c76ae3c0",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8ee9579c",
+   "id": "fb318830",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e75bf233",
+   "id": "0b1bc23d",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5777eafd",
+   "id": "2af70d1d",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d180eed9",
+   "id": "41496b6f",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "18908e87",
+   "id": "fe2e92a2",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a0a50d33",
+   "id": "5ca70a1e",
    "metadata": {
     "scrolled": false
    },
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "162fb829",
+   "id": "fd3a25f9",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e781eac6",
+   "id": "d58bafca",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "71215b09",
+   "id": "18d4b7a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "70d32f05",
+   "id": "bdf985dc",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6699bbba",
+   "id": "1f19828b",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "67ce33fb",
+   "id": "f4e32afa",
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c0e60fa5",
+   "id": "91a09ecd",
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6a5ecd28",
+   "id": "94b0c0e3",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "79a5ea0f",
+   "id": "3853c1d4",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c2cd7fbe",
+   "id": "87306101",
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "db81f48f",
+   "id": "07f96c90",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "51859087",
+   "id": "f2625a46",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e05fbe31",
+   "id": "81735e4b",
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "36574aa0",
+   "id": "700da809",
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d0192cf6",
+   "id": "cd228a0e",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1b610ab9",
+   "id": "dcd3f743",
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "17fd872a",
+   "id": "002eb9b0",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0aa7ddbc",
+   "id": "b94c8c3b",
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "6fe0125b",
+   "id": "20bb1f9a",
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1b4db679",
+   "id": "3efe44f8",
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f1d2844b",
+   "id": "5b385542",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ae3269d7",
+   "id": "47547dab",
    "metadata": {},
    "outputs": [
     {
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e70b845d",
+   "id": "61825269",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4c40240c",
+   "id": "85e2ec13",
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4a864ef3",
+   "id": "f7e2584f",
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5a81bd06",
+   "id": "a40743eb",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "013d4f8a",
+   "id": "f956a8d5",
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1874,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "32d7de5b",
+   "id": "191eeafb",
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b6f995b9",
+   "id": "264eff23",
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1926,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f9aae795",
+   "id": "8a33094d",
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1954,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "50389339",
+   "id": "07343853",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fb2cee7d",
+   "id": "1cd12e29",
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a12a1265",
+   "id": "e414d7c4",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9dbc8e15",
+   "id": "8635110f",
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +2071,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "df7c4e08",
+   "id": "c67a9611",
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "485232c8",
+   "id": "01be2299",
    "metadata": {
     "scrolled": true
    },
@@ -2145,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "59a40455",
+   "id": "18c54960",
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3776a495",
+   "id": "6640ebac",
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e48c78ba",
+   "id": "ff9577ea",
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2266,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b3733a48",
+   "id": "8fade3b2",
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2329,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5c6fa329",
+   "id": "44d8b6b2",
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "708bcabb",
+   "id": "cba5c8e1",
    "metadata": {},
    "outputs": [
     {
@@ -2441,7 +2441,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8a313bce",
+   "id": "9b14aa33",
    "metadata": {},
    "outputs": [
     {
@@ -2503,7 +2503,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "fcf1a4fa",
+   "id": "fcbb2ccf",
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2565,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "73364df5",
+   "id": "481d6682",
    "metadata": {},
    "outputs": [
     {
@@ -2627,7 +2627,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8150037f",
+   "id": "ae55503f",
    "metadata": {},
    "outputs": [
     {
@@ -2677,7 +2677,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "aa9440e9",
+   "id": "e6824965",
    "metadata": {},
    "outputs": [
     {
@@ -2704,7 +2704,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f0e12e19",
+   "id": "7dc5d871",
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2727,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "fd71023b",
+   "id": "45df5412",
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "be277524",
+   "id": "fc956cbd",
    "metadata": {},
    "outputs": [
     {
@@ -2777,7 +2777,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "36144d4f",
+   "id": "1df1431f",
    "metadata": {},
    "outputs": [
     {
@@ -2819,7 +2819,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c01a6517",
+   "id": "24555e5b",
    "metadata": {
     "scrolled": true
    },
@@ -2848,7 +2848,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c493401b",
+   "id": "dcc4d2a7",
    "metadata": {},
    "outputs": [
     {
@@ -2887,7 +2887,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a200e8c7",
+   "id": "14838577",
    "metadata": {},
    "outputs": [
     {
@@ -2914,7 +2914,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f51c5ce2",
+   "id": "032db5a4",
    "metadata": {},
    "outputs": [
     {
@@ -2953,10 +2953,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc96c59c",
+   "id": "f9a049f0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax=plt.subplots()\n",
+    "ax.plot"
+   ]
   }
  ],
  "metadata": {
